[package]
name = "WebClient"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.69"
secp256k1 = "0.15.0"
